# nitrogenase

./: .gitignore  README.md
fastsparsegrm/: Dockerfile  gclouddock.sh
gatk/wdl/: revert_sam.wdl  sort_sam.wdl
metastaar/: .cortenrc  Dockerfile  gclouddock.sh  launch_shell_in_container.sh  phenotypes
metastaar/bash/: vali_join.sh
metastaar/docker/: Dockerfile  launch_shell_in_container.sh
metastaar/r/: MetaSTAAR_Worker_Cov_Generation.R  MetaSTAAR_Worker_Score_Generation.R  STAAR_null_model.R
metastaar/r/old/: Dockerfile.txt
metastaar/r/samplecode/: LDL_F8_cov_v2.2_arrayjob.R  LDL_F8_summary_stat_v2.2_arrayjob.R  LDL_fulladj.R  metastaar_parquet.R
metastaar/rust/vali/: Cargo.toml
metastaar/rust/vali/src/: config.rs  lib.rs  main.rs  metastaar.rs  records.rs  stats.rs  tsv.rs
metastaar/rust/vali/src/browse/: run.rs
metastaar/rust/vali/src/extract/: run.rs
metastaar/rust/vali/src/join/: run.rs
metastaar/rust/vali/src/metastaar/: sumstats.rs
metastaar/rust/vali/src/tsv/: sumstats.rs  writer.rs
metastaar/rust/vali/src/util/: error.rs
metastaar/wdl/: inputs_metastaar.json  inputs_null_model.json  metastaar.wdl  null_model.wdl
metastaar/wdl/phenics/: inputs_null_model.json
metastaar/wdl/test_inputs/: inputs_metastaar.json
rap/explore/: gclouddock.sh
rap/explore/hello/: Readme.developer.md  Readme.md  dxapp.json
rap/explore/wdl/: explore.wdl  explore_alt.wdl  find_app.wdl  hello.wdl  ls.wdl
rap/munge/: Dockerfile  dockdev.sh  gclouddock.sh
samtools/: Dockerfile  gclouddock.sh
samtools/wdl/: merge_bams.wdl
utils/: corten
(+62 files in other folders)
